# Computer-Graphics

./: README.md
3D reconstruction from point clouds/DOC/: Surface-Reconstruction-from-Point-Clouds.docx
3D reconstruction from point clouds/EXE/: ReadMe.txt
3D reconstruction from point clouds/EXE/exe/: Surface_reconstruction.ilk  demoPoisson.ilk  out.ply  output.ply  pcl_visualizer.ilk
3D reconstruction from point clouds/GROUP INFORMATION/: HTCV-DHMT-2017.doc
3D reconstruction from point clouds/PPT/: Surface-Reconstruction-from-Point-Clouds.ppt
3D reconstruction from point clouds/Source code/: CMakeLists.txt  Surface_Reconstruction.cpp  doc.docx
